--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "version": 1,
-  "networks": {
+  "deployAliases": {
     "berkeley": {
       "url": "https://proxy.berkeley.minaexplorer.com/graphql",
       "keyPath": "keys/berkeley.json",
