--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "typescript": "^4.7.2"
   },
   "peerDependencies": {
-    "snarkyjs": "0.10.*"
+    "snarkyjs": "^0.12.1"
   },
   "dependencies": {
     "dotenv": "^16.0.3"
